--- a/.uncrustify.cfg
+++ b/.uncrustify.cfg
@@ -94,7 +94,7 @@ indent_namespace_limit                   = 0        # number
 indent_extern                            = false    # false/true
 
 # Whether the 'class' body is indented
-indent_class                             = false    # false/true
+indent_class                             = true     # false/true
 
 # Whether to indent the stuff after a leading class colon
 indent_class_colon                       = false    # false/true
@@ -926,13 +926,13 @@ nl_after_case                            = false    # false/true
 nl_case_colon_brace                      = ignore   # ignore/add/remove/force
 
 # Newline between namespace and {
-nl_namespace_brace                       = ignore   # ignore/add/remove/force
+nl_namespace_brace                       = remove   # ignore/add/remove/force
 
 # Add or remove newline between 'template<>' and whatever follows.
 nl_template_class                        = ignore   # ignore/add/remove/force
 
 # Add or remove newline between 'class' and '{'
-nl_class_brace                           = ignore   # ignore/add/remove/force
+nl_class_brace                           = remove   # ignore/add/remove/force
 
 # Add or remove newline after each ',' in the constructor member initialization
 nl_class_init_args                       = ignore   # ignore/add/remove/force
